--- a/src/partials/mod-10-repeta.html
+++ b/src/partials/mod-10-repeta.html
@@ -7,9 +7,40 @@
     <input type="text" class="form-control" name="query" />
   </div>
 
-  <button type="submit" class="btn btn-primary">Искать</button>
+  <button type="submit" class="btn btn-primary">Пошук</button>
 </form>
 
 <div class="js-card-container" style="display: flex"></div> -->
 
-<!--=================Приклад 3 ======================-->
+<!--=================Приклад &&&&& Пагінація.======================-->
+<form
+  class="form-inline search-form js-search-form"
+  style="display: flex; margin: 20px; justify-content: center"
+>
+  <div class="form-group mx-sm-3 mb-2" style="display: flex">
+    <label for="searchQuery" class="sr-only" style="margin-right: 15px"
+      >Що шукаємо?</label
+    >
+    <input
+      type="text"
+      class="form-control"
+      name="query"
+      id="searchQuery"
+      placeholder="Що шукаємо?"
+      autocomplete="off"
+    />
+  </div>
+  <button type="submit" class="btn btn-primary mb-2">Пошук</button>
+</form>
+
+<ul class="articles js-articles-container"></ul>
+
+<button type="button" class="btn btn-primary button" data-action="load-more">
+  <span
+    class="spinner-border spinner-border-sm spinner is-hidden"
+    role="status"
+    aria-hidden="true"
+  ></span>
+
+  <span class="label">Завантажити ще</span>
+</button>
