--- a/src/partials/mod-10-repeta.html
+++ b/src/partials/mod-10-repeta.html
@@ -12,8 +12,8 @@
 
 <div class="js-card-container" style="display: flex"></div> -->
 
-<!--=================Приклад &&&&& Пагінація.======================-->
-<form
+<!--=================Приклад 4 Пагінація.======================-->
+<!-- <form
   class="form-inline search-form js-search-form"
   style="display: flex; margin: 20px; justify-content: center"
 >
@@ -43,4 +43,4 @@
   ></span>
 
   <span class="label">Завантажити ще</span>
-</button>
+</button> -->
