--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,4 @@
-*,
+/* *,
 *::before,
 *::after {
   box-sizing: border-box;
@@ -75,4 +75,33 @@ img {
 
 .form {
   margin-bottom: 20px;
+}
+
+/* ---------Пагінація. Дозавантаження-------- */
+body {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  font-family: Helvetica, Arial, sans-serif;
+  overflow: hidden;
+}
+
+.loader {
+  display: none;
+}
+
+.visible {
+  display: block;
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  overflow: auto;
+  list-style-type: none;
 }
