--- a/src/partials/mod-10-vebinar.html
+++ b/src/partials/mod-10-vebinar.html
@@ -1,24 +1,23 @@
-<div class="example">
+<!----------------Пагінація. Варіант з кнопками----------------->
+<!-- <div class="example">
   <form class="form">
     <input type="text" name="query" />
     <button type="submit">Search</button>
   </form>
 
-  <ul class="list">
-    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
-    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
-    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
-    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
-    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
-    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
-  </ul>
+  <p class="loader">loading...</p>
 
-  <div class="pages">
-    <button type="button">1</button>
-    <button type="button">2</button>
-    <button type="button">3</button>
-    <button type="button">4</button>
-    <button type="button">5</button>
-    <button type="button">6</button>
-  </div>
-</div>
+  <ul class="list" style="list-style-type: none"></ul>
+</div> -->
+
+<!----------------Пагінація. Дозавантаження----------------->
+<form class="form">
+  <input type="text" name="query" />
+  <button type="submit">Search</button>
+</form>
+
+<p class="loader">loading...</p>
+
+<ul class="list"></ul>
+
+<button class="load-more">Load more</button>
