--- a/src/partials/mod-10-vebinar.html
+++ b/src/partials/mod-10-vebinar.html
@@ -11,7 +11,7 @@
 </div> -->
 
 <!----------------Пагінація. Дозавантаження----------------->
-<form class="form">
+<!-- <form class="form">
   <input type="text" name="query" />
   <button type="submit">Search</button>
 </form>
@@ -20,4 +20,4 @@
 
 <ul class="list"></ul>
 
-<button class="load-more">Load more</button>
+<button class="load-more">Load more</button> -->
