--- a/src/partials/mod-10-vebinar.html
+++ b/src/partials/mod-10-vebinar.html
@@ -18,6 +18,6 @@
 
 <p class="loader">loading...</p>
 
-<ul class="list"></ul>
+<ul class="list"></ul> -->
 
-<button class="load-more">Load more</button> -->
+<!-- <button class="load-more">Load more</button> -->
