--- a/src/partials/mod-11-abstract.html
+++ b/src/partials/mod-11-abstract.html
@@ -1,3 +1,3 @@
 <!----------------- Приклад 8. Паралельні запити ---------------->
-<button type="button" class="btn">Fetch users</button>
-<ul class="user-list"></ul>
+<!-- <button type="button" class="btn">Fetch users</button>
+<ul class="user-list"></ul> -->
